<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="MotorInputVariables" Id="{8526ca8d-3f7c-4c59-8fda-2c4d467d810b}">
    <Declaration><![CDATA[TYPE MotorInputVariables :
STRUCT
	start : BOOL;
	stop : BOOL;
	overload : BOOL;
	waitTime: TIME;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>