<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="MotorOutputVariables" Id="{5a034cf0-ad6a-4eed-872f-78c51913ee6d}">
    <Declaration><![CDATA[TYPE MotorOutputVariables :
STRUCT
	coil : BOOL;
	ovld : BOOL;
	fault : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>